# test

./: .gitignore  Cargo.toml  README.md  build.sh  manifest.json  package-lock.json  package.json  package.sh
.github/workflows/: build.yml  release.yml
src/: adapter.rs  config.rs  controller.rs  discovery.rs  main.rs  request.rs  throttle.rs  transport.rs
src/protocol/: codec.rs  decoder.rs  encoder.rs  mod.rs
src/scenes/: activate.rs  deactivate.rs  mod.rs  scene.rs
src/zones/: brightness.rs  clear_scene.rs  clear_scenes.rs  device.rs  mod.rs  on_off.rs  set_scene.rs
