[package]
name = "lumencache-adapter"
version = "1.0.1"
edition = "2018"

[dependencies]
log = "0.4"
bytes = "1"
futures = "0.3"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
tokio-serial = "5"
as-any = "0.2"

[dependencies.simple_logger]
version = "2"
default-features = false
features = []

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "time", "sync", "net"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.gateway-addon-rust]
git = "https://github.com/WebThingsIO/gateway-addon-rust"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
